Index.html first look

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <header>
+                To Do list
+            </header>
+            <section>
+                <div class="grid_wraper">
+                    <ul>
+                        <li>Na Sucho</li>
+                    </ul>
+                </div>
+            </section>
 
-    <div class="container">
-        Wow
+    </main>
     </div>
 
 
